--- a/src/App/components/elements/Analytics/Analytics.module.scss
+++ b/src/App/components/elements/Analytics/Analytics.module.scss
@@ -12,14 +12,13 @@
   text-align: center;
 
   .h3 {
-    margin-bottom: 3rem;
-
     font-size: 2rem;
     color: $neutral-darkBlue;
     font-weight: 700;
   }
 
   .p {
+    margin-top: 1.5rem;
     color: $neutral-gray;
 
     font-size: 1.3rem;
